--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h4 class="text-center mb-3">ToDo App</h4>
         <div id="addNew" data-bs-toggle="modal" data-bs-target="#form">
             <span>Add New Tasks</span>
-            <i class="fas fa-plus"></i>
+            <i id="plus" class="fas fa-plus"></i>
         </div>
         <h5 class="text-center my-3">Tasks</h5>
 
@@ -52,7 +52,7 @@
 <!-- Tasks -->
         <div id="tasks">
             <!-- Tasks 1 -->
-<!--             
+            
             <div>
                 <span class="fw-bold">Task 1</span>
                 <span class="small text-secondary">2022-1-20</span>
@@ -73,7 +73,7 @@
                     <i onClick= "editTask(this)"  data-bs-toggle="modal" data-bs-target="#form" class="fas fa-edit"></i>
                     <i onClick="deleteTask(this)" class="fas fa-trash-alt"></i>
                 </span>
-            </div> -->
+            </div> 
             <!-- Tasks 3 -->
             <!-- <div>
                 <span class="fw-bold">Task 3</span>
@@ -85,6 +85,8 @@
                     <i onClick="deleteTask(this)" class="fas fa-trash-alt"></i>
                 </span>
             </div> --> 
+            </div> 
+            </div> 
     <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
